applications/development/poker/routing/poker-destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: poker
  namespace: formidable
spec:
  host: 'poker.formidable.svc.cluster.local'
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
