applications/development/poker/routing/poker-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: poker
  namespace: formidable
spec:
  gateways:
    - poker-gateway
  hosts:
    - 'pokerstars.com' # external
    - 'poker.formidable.svc.cluster.local' # internal - from other services
  http:
    - match:
    - uri:
        prefix: /v1
      route:
      - destination:
          host: poker.formidable.svc.cluster.local
          subset: v1
    - match:
    - uri:
        prefix: /v2
      route:
      - destination:
          host: poker.formidable.svc.cluster.local
          subset: v2
